fix margin in portfolio - dark mode

--- a/pages/portfolio/portfolio.module.css
+++ b/pages/portfolio/portfolio.module.css
@@ -2,7 +2,7 @@
     background-color: #fff;
 }
 .portfolio__wrapper{
-    margin: 40px 0 ;
+    margin-bottom: 40px ;
     background-color: #fff;
 }
 .portfolio__header{
